# min-raft

./: Cargo.toml  DOCS  Dockerfile  README  README.md  network.json  raft_log_1.json
crates/raft-main/: Cargo.toml
crates/raft-main/examples/: simulate-cluster.rs
crates/raft-main/src/: command.rs  election.rs  lib.rs  logger.rs  main.rs  network.rs  raft_sm.rs  rpc.rs  sm.rs  state.rs
crates/raft-main/src/messages/: types.rs
